@@ -55,6 +55,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'php' => '5.2.0-0.0.0',
 			'typo3' => '4.4.0-4.6.99',
+			'xliff' => '1.0.0-',
 		),
 		'conflicts' => array(
 		),
