@@ -1,3 +1,7 @@
+2011-08-29  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Use EXT:xliff instead of manually crafted class.ext_update.php
+
 2011-08-26  Xavier Perseguers  <xavier@causal.ch>
 
 	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element
